fixed multithreaded execution